# bouncers

./: Cargo.toml  README.md
billiard-ui/: index.html  package-lock.json  package.json
billiard-ui/src/: App.tsx  apiTypes.ts  samples.ts
billiard-ui/src/components/: HealthStatus.tsx  UnitSquareSimulation.tsx
crates/billiard-api/: Cargo.toml
crates/billiard-api/examples/: sinai_sim.json  unit_square_sim.json
crates/billiard-api/src/: error.rs  main.rs  routes.rs  types.rs
crates/billiard-cli/: Cargo.toml
crates/billiard-cli/src/: demo_tables.rs  demos.rs  main.rs
crates/billiard-core/: Cargo.toml
crates/billiard-core/src/: lib.rs
crates/billiard-core/src/dynamics/: intersection.rs  mod.rs  simulation.rs  state.rs
crates/billiard-core/src/geometry/: boundary.rs  mod.rs  primitives.rs  segments.rs  table_spec.rs
