[package]
name = "billiard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
billiard-core = { path = "../billiard-core" }
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
